refactor: add rpcserver and httpserver packages + native go tools
